1. 统一 ClickHouse、DB2、DM、H2、Mongo、MySQL、Oracle、PostgreSQL、SQLServer 的 InsertSqlDialect 实现，改为通过 generatedKeyStrategy、supportDuplicateStrategy、insertSql 集中描述插入能力 2. 按数据库能力补齐批量插入、返回自增键、RETURNING/OUTPUT、多值插入等生成策略 3. 优化 Ignore/Update 冲突策略判断，避免仅主键列场景生成无效更新语句 4. 为 DM 方言补充序列查询支持，并实现基于 MERGE 的冲突更新 SQL 5. 增加 DB2、DM、Oracle 插入策略相关单测覆盖